{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 60,
  "lineage": "8774b101-ab09-d257-9758-e6e16957b431",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411627724078:subnet/subnet-d87ddd95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-d87ddd95",
            "map_public_ip_on_launch": true,
            "owner_id": "411627724078",
            "state": "available",
            "vpc_id": "vpc-fb7a5681"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411627724078:subnet/subnet-a7c1dcfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-a7c1dcfb",
            "map_public_ip_on_launch": true,
            "owner_id": "411627724078",
            "state": "available",
            "vpc_id": "vpc-fb7a5681"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411627724078:subnet/subnet-23766644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-23766644",
            "map_public_ip_on_launch": true,
            "owner_id": "411627724078",
            "state": "available",
            "vpc_id": "vpc-fb7a5681"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411627724078:vpc/vpc-fb7a5681",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-66ca5d1b",
            "default_route_table_id": "rtb-47e54e39",
            "default_security_group_id": "sg-1b31f132",
            "dhcp_options_id": "dopt-bf7bb5c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fb7a5681",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-47e54e39",
            "owner_id": "411627724078"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:411627724078:instance/i-0e695164f4616a34d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "alwang85-udagram-demo-host",
            "id": "i-0e695164f4616a34d",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "alwang85-udagram-demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-081cabdc14945afe1",
            "private_dns": "ip-172-31-30-201.ec2.internal",
            "private_ip": "172.31.30.201",
            "public_dns": "ec2-184-73-19-216.compute-1.amazonaws.com",
            "public_ip": "184.73.19.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0e4b2deface61bdd2",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "alwang85-udagram-demo-common",
              "alwang85-udagram-demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d87ddd95",
            "tags": {
              "Name": "alwang85-udagram-demo-control_plane-1",
              "kubernetes.io/cluster/alwang85-udagram-demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b6f7468f68af18c",
              "sg-0e39e3060d2001233"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:411627724078:instance/i-0942c660677479f0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "alwang85-udagram-demo-host",
            "id": "i-0942c660677479f0c",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "alwang85-udagram-demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-02bc2339c4ad696f6",
            "private_dns": "ip-172-31-47-22.ec2.internal",
            "private_ip": "172.31.47.22",
            "public_dns": "ec2-3-85-144-174.compute-1.amazonaws.com",
            "public_ip": "3.85.144.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0d4faf1bdcb6721fe",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "alwang85-udagram-demo-common",
              "alwang85-udagram-demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a7c1dcfb",
            "tags": {
              "Name": "alwang85-udagram-demo-control_plane-2",
              "kubernetes.io/cluster/alwang85-udagram-demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b6f7468f68af18c",
              "sg-0e39e3060d2001233"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:411627724078:instance/i-0b3bc67325dc64103",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "alwang85-udagram-demo-host",
            "id": "i-0b3bc67325dc64103",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "alwang85-udagram-demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e938b78ff472b619",
            "private_dns": "ip-172-31-8-7.ec2.internal",
            "private_ip": "172.31.8.7",
            "public_dns": "ec2-18-204-35-88.compute-1.amazonaws.com",
            "public_ip": "18.204.35.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-059bd25cc2833d2c6",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "alwang85-udagram-demo-common",
              "alwang85-udagram-demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-23766644",
            "tags": {
              "Name": "alwang85-udagram-demo-control_plane-3",
              "kubernetes.io/cluster/alwang85-udagram-demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b6f7468f68af18c",
              "sg-0e39e3060d2001233"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411627724078:loadbalancer/net/alwang85-udagram-demo-api-lb/7c03523d5597e977",
            "arn_suffix": "net/alwang85-udagram-demo-api-lb/7c03523d5597e977",
            "dns_name": "alwang85-udagram-demo-api-lb-7c03523d5597e977.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:411627724078:loadbalancer/net/alwang85-udagram-demo-api-lb/7c03523d5597e977",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "alwang85-udagram-demo-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-23766644"
              },
              {
                "subnet_id": "subnet-a7c1dcfb"
              },
              {
                "subnet_id": "subnet-d87ddd95"
              }
            ],
            "subnets": [
              "subnet-23766644",
              "subnet-a7c1dcfb",
              "subnet-d87ddd95"
            ],
            "tags": {
              "Cluster": "alwang85-udagram-demo",
              "kubernetes.io/cluster/alwang85-udagram-demo": "shared"
            },
            "vpc_id": "vpc-fb7a5681",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411627724078:listener/net/alwang85-udagram-demo-api-lb/7c03523d5597e977/f18e97337a54c25e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411627724078:targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411627724078:listener/net/alwang85-udagram-demo-api-lb/7c03523d5597e977/f18e97337a54c25e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:411627724078:loadbalancer/net/alwang85-udagram-demo-api-lb/7c03523d5597e977",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411627724078:targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a",
            "arn_suffix": "targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411627724078:targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a",
            "lambda_multi_value_headers_enabled": false,
            "name": "alwang85-udagram-demo-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-fb7a5681"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:411627724078:targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a-20200217061028097400000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411627724078:targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a",
            "target_id": "i-0e695164f4616a34d"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:411627724078:targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a-20200217061028120900000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411627724078:targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a",
            "target_id": "i-0942c660677479f0c"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:411627724078:targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a-20200217061028062800000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411627724078:targetgroup/alwang85-udagram-demo-api/b16ac2de23e57f7a",
            "target_id": "i-0b3bc67325dc64103"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411627724078:security-group/sg-02b6f7468f68af18c",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b6f7468f68af18c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "alwang85-udagram-demo-common",
            "name_prefix": null,
            "owner_id": "411627724078",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/alwang85-udagram-demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-fb7a5681"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411627724078:security-group/sg-0e39e3060d2001233",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-0e39e3060d2001233",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "alwang85-udagram-demo-control_planes",
            "name_prefix": null,
            "owner_id": "411627724078",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/alwang85-udagram-demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-fb7a5681"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}